--- a/.github/workflows/parser_compilation_tests.yml
+++ b/.github/workflows/parser_compilation_tests.yml
@@ -17,9 +17,10 @@ jobs:
         uses: actions/checkout@v2
       # Run actions
       # parser compilation tests
-      - name: librbg tests
+      - name: parser tests
         env:
           CC: ${{ matrix.cc }}
+          CFLAGS: ${{ matrix.optflags }}
         shell: bash
         run: |
           # Compilation tests of all cases
