--- a/.github/workflows/parser_compilation_tests.yml
+++ b/.github/workflows/parser_compilation_tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: parser tests
         env:
           CC: ${{ matrix.cc }}
-          CFLAGS: ${{ matrix.optflags }}
+          EXTRA_CFLAGS: ${{ matrix.optflags }}
         shell: bash
         run: |
           # Compilation tests of all cases
